fixing select items align issue on ios

--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -43,6 +43,7 @@
     transform: translateY(-20px);
     opacity: 0;
     transition: 0.5s ease;
+    width: 100%;
   }
 
   &__item {
@@ -53,6 +54,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     color: $white;
     transition: 0.3s ease;
 
